// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentColumn Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="ContentColumn ContentColumn--blue"
>
  <div
    class="ContentColumn-link"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`ContentColumn Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="ContentColumn ContentColumn--brown"
>
  <div
    class="ContentColumn-link"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;
